# lens

./: .gitignore  INSTRUCTIONS.md  README.md  analyze_training_log.py  cluster_dimensions.py  extract_images.py  main.py  pyproject.toml  review_ui.py  slides.html  train_and_analyze.py  train_cifar.py  train_cifar_resnet.py
experiments/cifar_resnet/: README.md
runs/: compare.json
runs/resnet_baseline/: analysis.json  compress_cache.json  dimensional_clusters.json  human_feedback.json  training_log.json
