[project]
name = "actual-lens-eval-platform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.5",
    "ollama>=0.6.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.47.0",
]
